<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_backdrop_height"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="@dimen/common_margin_left"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/imageView_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/color_background"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/progressBarHW"
                    android:layout_height="@dimen/progressBarHW"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />
            </RelativeLayout>


            <TextView
                android:id="@+id/textView_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="@dimen/common_margin_left"
                android:layout_marginTop="@dimen/common_margin_left"
                android:text="@string/dummy_text"
                android:textAppearance="?android:textAppearanceLargeInverse"
                android:textColor="@color/detail_insect_desc_text_color"
                android:visibility="gone"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/textView_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="@dimen/common_margin_left"
                android:layout_marginTop="@dimen/common_margin_left"
                android:text="@string/dummy_text"
                android:textAppearance="?android:textAppearanceMediumInverse"
                android:textColor="@color/detail_insect_desc_text_color"
                android:visibility="gone"
                app:layout_collapseMode="parallax" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:orientation="vertical"
            android:paddingLeft="@dimen/common_margin_left"
            android:paddingRight="@dimen/common_margin_left">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/detail_title_text_color" />

                <TextView
                    android:id="@+id/textView_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/detail_title_text_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descr"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/detail_title_text_color" />

                <TextView
                    android:id="@+id/textView_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/detail_title_text_color" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/detail_title_text_color" />

                <TextView
                    android:id="@+id/textView_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/detail_title_text_color" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watcher"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/detail_title_text_color" />

                <TextView
                    android:id="@+id/textView_watcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/detail_title_text_color" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/svn_url"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/detail_title_text_color" />

                <TextView
                    android:id="@+id/textView_svnURL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/detail_title_text_color" />

            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>